# sinus-sentinel

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
apps/apple/: README.md
apps/apple/Resources/: Info-iOS.plist  Info-macOS.plist
apps/apple/Sources/: AppModel.swift  AudioMonitoringService.swift  ContentView.swift  HistoryChartView.swift  ModelRunners.swift  SinusSentinelApp.swift
apps/desktop/: Cargo.toml
apps/desktop/src/: app.rs  capture.rs  instance.rs  main.rs  power.rs  shared.rs  state.rs  sync.rs
crates/app/: Cargo.toml
crates/app/src/: lib.rs  monitor.rs  state.rs
crates/apple/: Cargo.toml  uniffi.toml
crates/apple/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: golden.rs
crates/core/: Cargo.toml
crates/core/src/: audio.rs  error.rs  gate.rs  lib.rs  mel.rs  pipeline.rs  session.rs  store.rs  sync.rs  synth.rs  token.rs  types.rs
crates/core/src/classify/: decision.rs  embed.rs  mod.rs  native.rs  proto.rs  yamnet.rs
crates/core/tests/: yamnet_real.rs
docs/: APPLE_ARCHITECTURE.md  SPEC.md
model/: CONVERSION.md  README.md  convert_yamnet.py  fetch.sh
scripts/: apple-dev.sh  normalize-apple-bindings.sh
tools/uniffi-bindgen-swift/: Cargo.toml
