[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
sinus-core = { path = "crates/core" }

# Shared third-party deps (pinned once, referenced with `.workspace = true`).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
rand = "0.8"
hound = "3"
realfft = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
    "json",
] }

# Feature-gated / platform deps.
cpal = "0.15"
ringbuf = "0.4"
rubato = "0.15"
keyring = "3"
ort = { version = "=2.0.0-rc.9", default-features = false }

# Dev/test.
tiny_http = "0.12"

# Desktop UI.
eframe = "0.29"
egui = "0.29"
egui_plot = "0.29"
tray-icon = "0.19"
winit = "0.30"
