[package]
name = "sinus-desktop"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "sinus-desktop"
path = "src/main.rs"

[features]
default = []
# Enable live microphone capture (cpal) — the real sensor path. Off by default so
# the UI shell builds in CI without audio system libs; enabled for real use.
live-audio = ["sinus-core/live-audio"]

[dependencies]
sinus-core = { path = "../../crates/core" }
chrono.workspace = true
uuid.workspace = true
eframe.workspace = true
egui.workspace = true
egui_plot.workspace = true
tray-icon.workspace = true
