[package]
name = "sinus-cli"
version = "0.1.0"
edition.workspace = true
publish = false

[features]
default = []
# Use the real ONNX YAMNet backbone instead of the deterministic fallback.
onnx = ["sinus-core/onnx"]

[dependencies]
sinus-core = { path = "../core" }
chrono.workspace = true
serde_json.workspace = true
