[package]
name = "sinus-cli"
version = "0.3.0-alpha"
edition.workspace = true
publish = false

[features]
default = []
# Use the real ONNX YAMNet backbone instead of the deterministic fallback.
onnx = ["sinus-core/onnx"]
# Use the same OS credential backend as the desktop app for diagnostics/setup.
keyring = ["sinus-core/keyring"]

[dependencies]
sinus-core = { path = "../core" }
chrono.workspace = true
serde_json.workspace = true
